# serializer version: 1
# name: test_all_entities[number.my_pool_electrolysis_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 22.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pool_electrolysis_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Electrolysis setpoint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Electrolysis setpoint',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'electrolysis_setpoint',
    'unique_id': 'ABCDEF1234567890-electrolysis_setpoint',
    'unit_of_measurement': 'g/h',
  })
# ---
# name: test_all_entities[number.my_pool_electrolysis_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Electrolysis setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 22.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'g/h',
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pool_electrolysis_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_all_entities[number.my_pool_intel_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pool_intel_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Intel temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Intel temperature',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'intel_temperature',
    'unique_id': 'ABCDEF1234567890-intel_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[number.my_pool_intel_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Intel temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pool_intel_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24.0',
  })
# ---
# name: test_all_entities[number.my_pool_ph_maximum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 8,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 6,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pool_ph_maximum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH maximum',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.PH: 'ph'>,
    'original_icon': None,
    'original_name': 'pH maximum',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_maximum',
    'unique_id': 'ABCDEF1234567890-ph_maximum',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.my_pool_ph_maximum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'ph',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool pH maximum',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 8,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 6,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pool_ph_maximum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7.51',
  })
# ---
# name: test_all_entities[number.my_pool_ph_minimum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 8,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 6,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pool_ph_minimum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'pH minimum',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.PH: 'ph'>,
    'original_icon': None,
    'original_name': 'pH minimum',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ph_minimum',
    'unique_id': 'ABCDEF1234567890-ph_minimum',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.my_pool_ph_minimum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'ph',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool pH minimum',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 8,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 6,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pool_ph_minimum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6.5',
  })
# ---
# name: test_all_entities[number.my_pool_redox_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 800,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 500,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pool_redox_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Redox setpoint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Redox setpoint',
    'platform': 'vistapool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'redox_setpoint',
    'unique_id': 'ABCDEF1234567890-redox_setpoint',
    'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
  })
# ---
# name: test_all_entities[number.my_pool_redox_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'My Pool Redox setpoint',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 800,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 500,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pool_redox_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '700.0',
  })
# ---
